april 8th update almost done

--- a/artificia.html
+++ b/artificia.html
@@ -57,15 +57,23 @@
 
         <ul class="nav__items">
           <li class="nav__t">
+            <a href="index.html" class="nav__item">Home</a>
+          </li>
+          <li class="nav__t">
             <a href="artificia.html" class="nav__item">Artificia</a>
           </li>
-          <li class="nav__t"><a href="#" class="nav__item">About Us</a></li>
+          <li class="nav__t">
+            <a href="about.html" class="nav__item">About Us</a>
+          </li>
         </ul>
       </div>
     </nav>
     <header class="header-artificia" id="place">
       <div class="banner-box">
         <div class="header-banner"><img src="img/artbanner.png" /></div>
+        <div class="header-subtitle">
+          A Cyberpunk Visual Novel with Branching Choices
+        </div>
         <div class="header-text">
           Mensonia City, Myvia. A distant country in a distant future.<br /><br />
           A crisis emerges when bots begin to turn against their owners in
@@ -94,30 +102,30 @@
         </h3>
         <div id="section-suitors-tag"></div>
         <div class="suitors-row-back">
-          <div class="zane" id="zane">
+          <div class="suitorimage zane" id="zane">
             <img src="/img/zane.png" />
           </div>
-          <div class="petra" id="petra">
+          <div class="suitorimage petra" id="petra">
             <img src="/img/petra.png" />
           </div>
-          <div class="tom" id="tom">
+          <div class="suitorimage tom" id="tom">
             <img src="/img/tom.png" />
           </div>
-          <div class="elina" id="elina">
+          <div class="suitorimage elina" id="elina">
             <img src="/img/elina.png" />
           </div>
         </div>
         <div class="suitors-row-front">
-          <div class="nemo sf" id="nemo">
+          <div class="suitorimage nemo sf" id="nemo">
             <img src="/img/nemo.png" />
           </div>
-          <div class="stercus sf" id="stercus">
+          <div class="suitorimage stercus sf" id="stercus">
             <img src="/img/stercus.png" />
           </div>
-          <div class="ilis sf" id="ilis">
+          <div class="suitorimage ilis sf" id="ilis">
             <img src="/img/ilis.png" />
           </div>
-          <div class="heis sf" id="heis">
+          <div class="suitorimage heis sf" id="heis">
             <img src="/img/heis.png" />
           </div>
         </div>
@@ -128,7 +136,7 @@
           Meet &nbsp;&nbsp;&nbsp;Luna &nbsp;&nbsp;&nbsp;Ashfall
         </h2>
         <h3 class="section-subtitle">
-          The main character behind your story.<br />The carefree art student
+          The main character behind your story.<br />The average art student
           turned potential felon's accomplice.
         </h3>
 
@@ -136,17 +144,15 @@
           <div class="luna-description">
             <div class="luna-description__text">
               Raised by her father, Orvis Ashfall, in the Myvian Cynosure, Luna
-              lived an ordinary, human life--until she received a message that
-              her father was arrested, with an expected sentence of execution.
+              lived an ordinary, human life—until she received a message that
+              her father was arrested. Suspected of implanting malware within robots, or 'bots', as they are called, Orvis's suspected sentence is execution for national treason.
             </div>
             <div class="luna-description__text">
-              Navigate her story, build relationships with bots as you decide
-              how to navigate the rebels and the government, and grow close with
+              As an unsuspecting young adult, Luna must navigate world governments, rebels, and fringe parties to find the truth behind her father's research. Navigate her story, build relationships with bots as you decide
+              how to navigate the rebels and the government, and discover the meaning of existence and love as you grow close with
               a bot.
             </div>
-            <div class="luna-description__text">
-              You'll fall in love with her quirky nature.
-            </div>
+            
           </div>
           <div class="lunatallcontainer">
             <img class="lunaimage full1" src="/img/lunafullboth.png" />
@@ -162,56 +168,10 @@
         </div>
       </section>
 
-      <section class="section-landing">
-        <h2 class="section-title">
-          Explore&nbsp;&nbsp;&nbsp; a&nbsp;&nbsp;&nbsp; new&nbsp;&nbsp;&nbsp;
-          world
-        </h2>
-
-        <div class="meow">
-          <div class="div1 p image1"></div>
-          <div class="div2 p sectText">
-            <h3 class="sectionHeaders">Luna Ashfall</h3>
-            You are Luna Ashfall, the pink-haired, industrious daughter of the
-            lead engineer of bots, Orvis Ashfall. Your father was just arrested
-            for suspicion of treason for implanting a bug within robots that
-            allowed them to rebel. How will you save your father and prevent a
-            disaster from happening between the robots and your government?
-          </div>
-          <div class="div3 p"></div>
-        </div>
-
-        <div class="meow">
-          <div class="div1 p"></div>
-          <div class="div2 p sectText">
-            <h3 class="sectionHeaders">Mensonia City</h3>
-            Set in the cyberpunk, near-future dystopian world of Myvia, in the
-            city of Mensonia. With a powerful government that controls the means
-            of production of robots, called ‘bots’, that back every aspect of
-            everyday life, the story unwinds when robots begin to defect against
-            their human owners.
-          </div>
-          <div class="div3 p image2"></div>
-        </div>
-
-        <div class="meow">
-          <div class="div1 p image3"></div>
-          <div class="div2 p sectText">
-            <h3 class="sectionHeaders">Combine Love and Story</h3>
-            Artificia is a visual novel game that includes dating sim elements
-            and branching storylines, both of which will lead the player to one
-            of over 40 endings. Featuring authentic characters and writing,
-            soundscapes that will bring you into every environment, and lovingly
-            crafted pixel art graphics, Artificia is KoiDev’s first video game!
-          </div>
-          <div class="div3 p"></div>
-        </div>
-      </section>
-
       <section class="section-technical">
         <h2 class="section-title">
           Unique&nbsp;&nbsp;&nbsp;Game&nbsp;&nbsp;&nbsp;
-          Mechanics&nbsp;&nbsp;&nbsp;
+          Mechanics
         </h2>
         <h3 class="section-subtitle">
           Over 40 endings. 5 main chapters. Side Stories to learn more about
@@ -221,10 +181,10 @@
           <div class="carousel-container">
             <!-- Images -->
             <div class="tech-img-container">
+              <img class="technical-img fade" src="img/elina_intro.gif" />
               <img class="technical-img fade" src="img/nemo_intro.gif" />
               <img class="technical-img fade" src="img/petra_intro.gif" />
               <img class="technical-img fade" src="img/stercus_intro.gif" />
-              <img class="technical-img fade" src="img/elina_intro.gif" />
               <img class="technical-img fade" src="img/zane_intro.gif" />
               <img class="technical-img fade" src="img/heis_intro.gif" />
               <img class="technical-img fade" src="img/tom_intro.gif" />
@@ -250,6 +210,66 @@
         </div>
       </section>
 
+      <section class="section-landing">
+        <h2 class="section-title">
+          Explore&nbsp;&nbsp;&nbsp; a&nbsp;&nbsp;&nbsp; new&nbsp;&nbsp;&nbsp;
+          world
+        </h2>
+
+        <div class="meow">
+          <div class="imagebase"><img src="img/heischoice.gif"></div>   
+            <div class="sectText">
+              <h3 class="sectionHeaders">
+                A Visual Novel with Branching Choices
+              </h3>
+                Artificia is a visual novel game that includes dating sim elements
+                and branching storylines, both of which will lead the player to one
+                of over 40 endings. Featuring authentic characters and writing,
+                soundscapes that will bring you into every environment, and lovingly
+                crafted pixel art graphics, Artificia is KoiDev’s first video game!
+            </div>      
+        </div>
+
+        <div class="meow">
+          <div class="sectText">
+            <h3 class="sectionHeaders">Unique Side Stories</h3>
+            Each chapter includes a side story for each suitor, where you get to
+            learn more about the lives of each suitor.
+          </div>
+          <div class="imagebase"><img src="img/mapimage.png"></div>
+        </div>
+
+        <div class="meow">
+          <div class="imagebase"><img src="img/lunaintro.gif"></div>
+          <div class="sectText">
+            <h3 class="sectionHeaders">Indie Pixel Art Aesthetic</h3>
+            With a lovingly hand-crafted pixel art aesthetic, Artificia brings a
+            unique art aesthetic to the visual novel genre!
+          </div>
+        </div>
+
+        <div class="meow">
+          <div class="sectText">
+            <h3 class="sectionHeaders">Immersive Soundscapes</h3>
+            Artificia includes immersive soundscapes recorded using professional
+            audio equipment. When you play the game, you'll feel like you're
+            really in the environment--from the ever-present buzz in Mensonia
+            City, to the haunting windy passages of the underground sewers!
+          </div>
+          <div class="imagebase"><img src="img/petrainteraction.gif"></div>
+        </div>
+
+        <div class="meow">
+          <div class="imagebase"><img src="img/relationships.png"></div>
+          <div class="sectText">
+            <h3 class="sectionHeaders">
+              Relationships and Rebel Meters
+            </h3>
+            Artificia measures your interactions on both a relationship-scale and a rebel affinity-scale. Both will influence which of 40+ endings you get.
+          </div>
+        </div>
+      </section>
+
       <section class="section-brooch">
         <h2 class="section-title">
           Unlock&nbsp;&nbsp;&nbsp; Myvia's&nbsp;&nbsp;&nbsp;
@@ -261,15 +281,26 @@
         </h3>
 
         <div class="section-brooch__container">
-          <div class="brooch-text">Follow us on Twitter for Updates</div>
+          <div class="text-container">
+            <a
+              href="https://twitter.com/koidevgames"
+              target="_target"
+              class="section-social__item"
+            >
+              <div class="brooch-text">Follow us on Twitter for Updates</div>
+            </a>
+          </div>
           <div class="brooch-img-container">
             <img
               class="brooch-img"
               alt="Luna's Brooch"
-              src="img/lunabrooch.png"
+              src="img/bg_lunabrooch.png"
             />
           </div>
-          <div class="brooch-text">Try the demo- coming soon!</div>
+          <a href="#" target="_target" class="section-social__item">
+            <div class="brooch-text">Demo coming May 1, 2021!</div>
+          </a>
+          </a>
         </div>
       </section>
     </div>
@@ -294,7 +325,6 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="js/three.js"></script>
 
-    <script src="js/script.js"></script>
     <script type="text/javascript" src="js/test.js"></script>
   </body>
 </html>
