Primary final upload

--- a/artificia.html
+++ b/artificia.html
@@ -145,14 +145,18 @@
             <div class="luna-description__text">
               Raised by her father, Orvis Ashfall, in the Myvian Cynosure, Luna
               lived an ordinary, human life—until she received a message that
-              her father was arrested. Suspected of implanting malware within robots, or 'bots', as they are called, Orvis's suspected sentence is execution for national treason.
+              her father was arrested. Suspected of implanting malware within
+              robots, or 'bots', as they are called, Orvis's suspected sentence
+              is execution for national treason.
             </div>
             <div class="luna-description__text">
-              As an unsuspecting young adult, Luna must navigate world governments, rebels, and fringe parties to find the truth behind her father's research. Navigate her story, build relationships with bots as you decide
-              how to navigate the rebels and the government, and discover the meaning of existence and love as you grow close with
-              a bot.
+              As an unsuspecting young adult, Luna must navigate world
+              governments, rebels, and fringe parties to find the truth behind
+              her father's research. Navigate her story, build relationships
+              with bots as you decide how to navigate the rebels and the
+              government, and discover the meaning of existence and love as you
+              grow close with a bot.
             </div>
-            
           </div>
           <div class="lunatallcontainer">
             <img class="lunaimage full1" src="/img/lunafullboth.png" />
@@ -170,8 +174,7 @@
 
       <section class="section-technical">
         <h2 class="section-title">
-          Unique&nbsp;&nbsp;&nbsp;Game&nbsp;&nbsp;&nbsp;
-          Mechanics
+          Unique&nbsp;&nbsp;&nbsp;Game&nbsp;&nbsp;&nbsp; Mechanics
         </h2>
         <h3 class="section-subtitle">
           Over 40 endings. 5 main chapters. Side Stories to learn more about
@@ -217,30 +220,30 @@
         </h2>
 
         <div class="meow">
-          <div class="imagebase"><img src="img/heischoice.gif"></div>   
-            <div class="sectText">
-              <h3 class="sectionHeaders">
-                A Visual Novel with Branching Choices
-              </h3>
-                Artificia is a visual novel game that includes dating sim elements
-                and branching storylines, both of which will lead the player to one
-                of over 40 endings. Featuring authentic characters and writing,
-                soundscapes that will bring you into every environment, and lovingly
-                crafted pixel art graphics, Artificia is KoiDev’s first video game!
-            </div>      
+          <div class="imagebase"><img src="img/heischoice.gif" /></div>
+          <div class="sectText">
+            <h3 class="sectionHeaders">
+              A Visual Novel with Branching Choices
+            </h3>
+            Artificia is a visual novel game that includes dating sim elements
+            and branching storylines, both of which will lead the player to one
+            of over 40 endings. Featuring authentic characters and writing,
+            soundscapes that will bring you into every environment, and lovingly
+            crafted pixel art graphics, Artificia is KoiDev’s first video game!
+          </div>
         </div>
 
-        <div class="meow">
+        <div class="meow column-reverse">
           <div class="sectText">
             <h3 class="sectionHeaders">Unique Side Stories</h3>
             Each chapter includes a side story for each suitor, where you get to
             learn more about the lives of each suitor.
           </div>
-          <div class="imagebase"><img src="img/mapimage.png"></div>
+          <div class="imagebase"><img src="img/mapimage.png" /></div>
         </div>
 
         <div class="meow">
-          <div class="imagebase"><img src="img/lunaintro.gif"></div>
+          <div class="imagebase"><img src="img/lunaintro.gif" /></div>
           <div class="sectText">
             <h3 class="sectionHeaders">Indie Pixel Art Aesthetic</h3>
             With a lovingly hand-crafted pixel art aesthetic, Artificia brings a
@@ -248,7 +251,7 @@
           </div>
         </div>
 
-        <div class="meow">
+        <div class="meow column-reverse">
           <div class="sectText">
             <h3 class="sectionHeaders">Immersive Soundscapes</h3>
             Artificia includes immersive soundscapes recorded using professional
@@ -256,16 +259,16 @@
             really in the environment--from the ever-present buzz in Mensonia
             City, to the haunting windy passages of the underground sewers!
           </div>
-          <div class="imagebase"><img src="img/petrainteraction.gif"></div>
+          <div class="imagebase"><img src="img/petrainteraction.gif" /></div>
         </div>
 
         <div class="meow">
-          <div class="imagebase"><img src="img/relationships.png"></div>
+          <div class="imagebase"><img src="img/relationships.png" /></div>
           <div class="sectText">
-            <h3 class="sectionHeaders">
-              Relationships and Rebel Meters
-            </h3>
-            Artificia measures your interactions on both a relationship-scale and a rebel affinity-scale. Both will influence which of 40+ endings you get.
+            <h3 class="sectionHeaders">Relationships and Rebel Meters</h3>
+            Artificia measures your interactions on both a relationship-scale
+            and a rebel affinity-scale. Both will influence which of 40+ endings
+            you get.
           </div>
         </div>
       </section>
@@ -290,17 +293,17 @@
               <div class="brooch-text">Follow us on Twitter for Updates</div>
             </a>
           </div>
-          <div class="brooch-img-container">
-            <img
-              class="brooch-img"
-              alt="Luna's Brooch"
-              src="img/bg_lunabrooch.png"
-            />
-          </div>
+
           <a href="#" target="_target" class="section-social__item">
             <div class="brooch-text">Demo coming May 1, 2021!</div>
           </a>
-          </a>
+        </div>
+        <div class="brooch-img-container">
+          <img
+            class="brooch-img"
+            alt="Luna's Brooch"
+            src="img/bg_lunabrooch.png"
+          />
         </div>
       </section>
     </div>
