--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
           <div class="section-us__profiles-image">
             <img
               class="section-us__profiles--img"
-              src="../img/emmaschaale.jpg"
+              src="img/emmaschaale.jpg"
               alt="Emma Schaale"
             />
           </div>
@@ -91,7 +91,7 @@
           <div class="section-us__profiles-image">
             <img
               class="section-us__profiles--img"
-              src="../img/hongyuli.jpg"
+              src="img/hongyuli.jpg"
               alt="Hongyu Li"
             />
           </div>
@@ -109,7 +109,7 @@
           <div class="section-us__profiles-image">
             <img
               class="section-us__profiles--img"
-              src="../img/hanklasley.jpg"
+              src="img/hanklasley.jpg"
               alt="Hank Lasley"
             />
           </div>
@@ -129,7 +129,7 @@
           <div class="section-us__profiles-image">
             <img
               class="section-us__profiles--img"
-              src="../img/katiegiugno.png"
+              src="img/katiegiugno.png"
               alt="Katie Giugno"
             />
           </div>
