--- a/artificia.html
+++ b/artificia.html
@@ -103,30 +103,30 @@
         <div id="section-suitors-tag"></div>
         <div class="suitors-row-back">
           <div class="suitorimage zane" id="zane">
-            <img src="/img/zane.png" />
+            <img src="img/zane.png" />
           </div>
           <div class="suitorimage petra" id="petra">
-            <img src="/img/petra.png" />
+            <img src="img/petra.png" />
           </div>
           <div class="suitorimage tom" id="tom">
-            <img src="/img/tom.png" />
+            <img src="img/tom.png" />
           </div>
           <div class="suitorimage elina" id="elina">
-            <img src="/img/elina.png" />
+            <img src="img/elina.png" />
           </div>
         </div>
         <div class="suitors-row-front">
           <div class="suitorimage nemo sf" id="nemo">
-            <img src="/img/nemo.png" />
+            <img src="img/nemo.png" />
           </div>
           <div class="suitorimage stercus sf" id="stercus">
-            <img src="/img/stercus.png" />
+            <img src="img/stercus.png" />
           </div>
           <div class="suitorimage ilis sf" id="ilis">
-            <img src="/img/ilis.png" />
+            <img src="img/ilis.png" />
           </div>
           <div class="suitorimage heis sf" id="heis">
-            <img src="/img/heis.png" />
+            <img src="img/heis.png" />
           </div>
         </div>
       </section>
@@ -159,14 +159,14 @@
             </div>
           </div>
           <div class="lunatallcontainer">
-            <img class="lunaimage full1" src="/img/lunafullboth.png" />
+            <img class="lunaimage full1" src="img/lunafullboth.png" />
           </div>
           <div class="lunasubcontainer">
             <div class="lunaprofilecontainer">
-              <img class="lunaimage" src="/img/lunaface1.png" />
+              <img class="lunaimage" src="img/lunaface1.png" />
             </div>
             <div class="lunaprofilecontainer">
-              <img class="lunaimage" src="/img/lunaface2.png" />
+              <img class="lunaimage" src="img/lunaface2.png" />
             </div>
           </div>
         </div>
