--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="section-us__profiles-image">
               <img
                 class="section-us__profiles--img"
-                src="../img/emmaschaale.jpg"
+                src="img/emmaschaale.jpg"
                 alt="Emma Schaale"
               />
             </div>
@@ -157,7 +157,7 @@
             <div class="section-us__profiles-image">
               <img
                 class="section-us__profiles--img"
-                src="../img/hongyuli.jpg"
+                src="img/hongyuli.jpg"
                 alt="Hongyu Li"
               />
             </div>
@@ -169,7 +169,7 @@
             <div class="section-us__profiles-image">
               <img
                 class="section-us__profiles--img"
-                src="../img/hanklasley.jpg"
+                src="img/hanklasley.jpg"
                 alt="Hank Lasley"
               />
             </div>
@@ -182,7 +182,7 @@
             <div class="section-us__profiles-image">
               <img
                 class="section-us__profiles--img"
-                src="../img/katiegiugno.png"
+                src="img/katiegiugno.png"
                 alt="Katie Giugno"
               />
             </div>
