Mobile responsive test1

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="section-us__profiles section-us__emma">
             <h3 class="section-us__profiles--title">Emma Schaale</h3>
             <h4 class="section-us__profiles--title2">
-              Producer, Artist, Writing, Marketing
+              Producer, Artist, Writer, Marketing
             </h4>
             <div class="section-us__profiles-image">
               <img
